Add additional design for header section

--- a/sunnyside-agency-landing-page/index.html
+++ b/sunnyside-agency-landing-page/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <head>
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@1,600&family=Fraunces:opsz,wght@9..144,100;9..144,600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Barlow" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fraunces" rel="stylesheet">
     <script src="./js/script.js" defer></script>
     <title>Sunny Side</title>
 </head>
@@ -15,6 +16,10 @@
                 <span class = "menu-option">Projects</span>
                 <span class = "menu-option">Contact</span>
             </div>
+        </div>
+        <div class="main-title">
+            <p>WE ARE CREATIVES</p>
+            <img id ="icon-arrow-down" src="./images/icon-arrow-down.svg">
         </div>
         <img class = "header-background" src="images/desktop/image-header.jpg">
     </div>
